; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_audio_codec.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_audio_codec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_property = type { i32 }
%struct.TYPE_4__ = type { %struct.track*** }
%struct.track = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i8* }

@STREAM_AUDIO = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.m_property*, i32, i8*)* @mp_property_audio_codec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mp_property_audio_codec(i8* %0, %struct.m_property* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.m_property*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_4__*, align 8
  %10 = alloca %struct.track*, align 8
  %11 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.m_property* %1, %struct.m_property** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = bitcast i8* %12 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %13, %struct.TYPE_4__** %9, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load %struct.track***, %struct.track**** %15, align 8
  %17 = getelementptr inbounds %struct.track**, %struct.track*** %16, i64 0
  %18 = load %struct.track**, %struct.track*** %17, align 8
  %19 = load i64, i64* @STREAM_AUDIO, align 8
  %20 = getelementptr inbounds %struct.track*, %struct.track** %18, i64 %19
  %21 = load %struct.track*, %struct.track** %20, align 8
  store %struct.track* %21, %struct.track** %10, align 8
  %22 = load %struct.track*, %struct.track** %10, align 8
  %23 = icmp ne %struct.track* %22, null
  br i1 %23, label %24, label %35

24:                                               ; preds = %4
  %25 = load %struct.track*, %struct.track** %10, align 8
  %26 = getelementptr inbounds %struct.track, %struct.track* %25, i32 0, i32 0
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %26, align 8
  %28 = icmp ne %struct.TYPE_3__* %27, null
  br i1 %28, label %29, label %35

29:                                               ; preds = %24
  %30 = load %struct.track*, %struct.track** %10, align 8
  %31 = getelementptr inbounds %struct.track, %struct.track* %30, i32 0, i32 0
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = load i8*, i8** %33, align 8
  br label %36

35:                                               ; preds = %24, %4
  br label %36

36:                                               ; preds = %35, %29
  %37 = phi i8* [ %34, %29 ], [ null, %35 ]
  store i8* %37, i8** %11, align 8
  %38 = load i32, i32* %7, align 4
  %39 = load i8*, i8** %8, align 8
  %40 = load i8*, i8** %11, align 8
  %41 = call i32 @m_property_strdup_ro(i32 %38, i8* %39, i8* %40)
  ret i32 %41
}

declare dso_local i32 @m_property_strdup_ro(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
